﻿Pre6
+ Major backend overhaul, config related issues are now simple to fix (if they even arise)
+ Much more aggressive flush config
+ Now handles crashes in the program itself, so you can send me proper error dumps
+ Config files are now GZip compressed (stored as config.json.gz)
+ Taskbar now shows progress
+ Added the ability to delete mods from the main view
+ Prompts user if file is in use when trying to delete a file

Pre5.2.2
+ Fixed not deleting files when there are no subfiles detected
+ Added a search bar
+ Built this version with optimization option in compiler

Pre5.2.1
+ Fixed more issues with Wizzard Migrator
+ Fixed popup asking if it had installed correctly (for Win 7 - 10)
+ Removed the requirement for administrator access
+ Added a mediocre icon

Pre5.2
+ Merged Wizzard Migrator into the main program
+ Added a (proper) logging system
+ Added the ability to be able to cancel an operation (provided it's at a possible time)
+ Added tracking for when mods have been installed
+ Added a warning when collisions are detected and how the user can resolve it
+ Added the option to switch between sorting via name or install date

Pre5.1
+ Fixed wrong progress counter when reverting mods
+ Fixed issues with using the Wizzard Migrator
+ Fixed other small issues

Pre5
+ Added text to UI buttons
+ Supports .zip mods
+ Added autosorting to main view
+ New popup when mods have installed successfully
+ Preferences now show what path is being used internally for the data folders
+ Description box has had a visual overhaul, and mod details have been moved there
+ Changed how mods are displayed, still experimenting with how it looks
+ Mods can now be both installed and uninstalled simultaneously
+ Images, descriptions and most data are now properly cached for insane speedups
+ Mods are now installed on a "synchronization" basis, similar to iTunes
+ Option to disable conflict checks
+ Fixed an issue where backups were stored all in the MAKE section of the archive